<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_day"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:id="@+id/todaysWeatherIcon"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:src="@drawable/condition_sunny">
            </ImageView>

            <TextView
                android:id="@+id/today"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Today"
                android:textColor="@color/white"
                android:textSize="35dp"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                >
            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">

            <TextView
                android:id="@+id/todaysDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Monday, 26 September"
                android:textColor="#EAEAEA"
                android:textSize="15dp">
            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/todaysTemperature"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="125dp"
                android:text="25"
                android:textColor="@color/white"
                android:textSize="55dp">
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="°"
                android:textColor="@color/white"
                android:textSize="40dp"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="4dp">
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="C"
                android:textColor="@color/white"
                android:textSize="30dp"
                android:layout_marginTop="8dp">
            </TextView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/todaysCondition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="12dp"
                    android:text="Sunny"
                    android:textColor="@color/white"
                    android:textSize="20dp">
                </TextView>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/todaysHigh"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="12dp"
                        android:text="30"
                        android:textColor="@color/white"
                        android:textSize="13dp">
                    </TextView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="°"
                        android:textColor="@color/white"
                        android:textSize="15dp"
                        android:layout_marginLeft="1dp">
                    </TextView>



                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="|"
                        android:layout_marginLeft="4dp"
                        android:textColor="@color/white"
                        android:textSize="13dp">
                    </TextView>

                    <TextView
                        android:id="@+id/todaysLow"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="4dp"
                        android:text="20"
                        android:textColor="@color/white"
                        android:textSize="13dp">
                    </TextView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="°"
                        android:textColor="@color/white"
                        android:textSize="15dp"
                        android:layout_marginLeft="1dp">
                    </TextView>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal">

            <TextView
                android:id="@+id/currentLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="Durban, South Africa"
                android:textColor="@color/white"></TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3 - DAY FORECAST"
                android:textColor="@color/white"
                android:layout_marginLeft="20dp"
                android:textSize="18dp">
            </TextView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:layout_margin="10dp">

                    <!-- Table heading -->

                    <TableRow
                        android:background="#3030BD">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/col1"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            android:padding="8sp"
                            android:textSize="12sp"
                            android:layout_weight="3"
                            android:gravity="center_horizontal"/>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/col2"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            android:padding="8sp"
                            android:textSize="12sp"
                            android:layout_weight="2"
                            android:gravity="center_horizontal"/>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/col3"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            android:padding="8sp"
                            android:textSize="12sp"
                            android:layout_weight="2"
                            android:gravity="center_horizontal"/>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/col4"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            android:padding="8sp"
                            android:textSize="12sp"
                            android:layout_weight="2"
                            android:gravity="center_horizontal"/>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/col5"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            android:padding="8sp"
                            android:textSize="12sp"
                            android:layout_weight="2"
                            android:gravity="center_horizontal"/>

                    </TableRow>

                    <!-- Table Data -->

                    <TableRow>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/row1Day"
                            android:padding="8sp"
                            android:textSize="11sp"
                            android:layout_weight="3"
                            android:gravity="center"/>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/row1Condition"
                            android:padding="8sp"
                            android:textSize="11sp"
                            android:layout_weight="3"
                            android:gravity="center"/>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/row1Rain"
                            android:padding="8sp"
                            android:textSize="11sp"
                            android:layout_weight="2"
                            android:gravity="center_horizontal"/>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/row1High"
                            android:padding="8sp"
                            android:textSize="11sp"
                            android:layout_weight="2"
                            android:gravity="center_horizontal"/>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/row1Low"
                            android:padding="8sp"
                            android:textSize="11sp"
                            android:layout_weight="2"
                            android:gravity="center_horizontal"/>
                    </TableRow>

                    <TableRow>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/row2Day"
                            android:padding="8sp"
                            android:textSize="11sp"
                            android:layout_weight="3"
                            android:gravity="center"/>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/row2Condition"
                            android:padding="8sp"
                            android:textSize="11sp"
                            android:layout_weight="3"
                            android:gravity="center"/>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/row2Rain"
                            android:padding="8sp"
                            android:textSize="11sp"
                            android:layout_weight="2"
                            android:gravity="center_horizontal"/>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/row2High"
                            android:padding="8sp"
                            android:textSize="11sp"
                            android:layout_weight="2"
                            android:gravity="center_horizontal"/>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/row2Low"
                            android:padding="8sp"
                            android:textSize="11sp"
                            android:layout_weight="2"
                            android:gravity="center_horizontal"/>
                    </TableRow>

                    <TableRow>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/row3Day"
                            android:padding="8sp"
                            android:textSize="11sp"
                            android:layout_weight="3"
                            android:gravity="center"/>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/row3Condition"
                            android:padding="8sp"
                            android:textSize="11sp"
                            android:layout_weight="3"
                            android:gravity="center"/>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/row3Rain"
                            android:padding="8sp"
                            android:textSize="11sp"
                            android:layout_weight="2"
                            android:gravity="center_horizontal"/>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/row3High"
                            android:padding="8sp"
                            android:textSize="11sp"
                            android:layout_weight="2"
                            android:gravity="center_horizontal"/>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/row3Low"
                            android:padding="8sp"
                            android:textSize="11sp"
                            android:layout_weight="2"
                            android:gravity="center_horizontal"/>
                    </TableRow>

                </TableLayout>

            </RelativeLayout>

        </LinearLayout>



    </LinearLayout>


</ScrollView>